# simple-rule-engine

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: python-app.yml
simpleruleengine/: test_NumericToken.py  test_RuleRowDecision.py  test_RuleRowScore.py  test_RuleScore.py  test_RuleSetDecision.py  test_RuleSetScore.py  test_StringToken.py  test_WhenAll.py  test_WhenAny.py  test_expression.py  test_expression_builder.py  test_operator.py  test_rule_decision.py  test_rule_row_decision.py  test_rule_row_score.py  test_rule_score.py  test_rule_set_decision.py  test_rule_set_score.py  test_schema_file_reader.py  test_when_all.py  test_when_any.py
simpleruleengine/conditional/: And.py  Conditional.py  Or.py  WhenAll.py  WhenAny.py  conditional.py  test_And.py  test_Or.py  when_all.py  when_any.py
simpleruleengine/exception/: rule_row_exceptions.py
simpleruleengine/expression/: expression.py  expression_builder.py
simpleruleengine/operator/: Between.py  Eq.py  Gt.py  Gte.py  In.py  Lt.py  Lte.py  NotIn.py  NumericOperator.py  Operator.py  StringOperator.py  between.py  boolean_operator.py  equal.py  greater_than.py  greater_than_equal.py  is_false.py  is_true.py  less_than.py  less_than_equal.py  not_equal.py  numeric_operator.py  string_in.py  string_not_in.py  string_operator.py  test_Between.py
simpleruleengine/rule/: RuleRowDecision.py  RuleScore.py  rule.py  rule_decision.py  rule_score.py  test_RuleRowDecision.py  test_RuleRowScore.py
simpleruleengine/rulerow/: RuleRowDecision.py  RuleRowScore.py  (+2 more)
(+28 files in other folders)
