[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleruleengine"
version = "2.0.0"
authors = [
  { name="Jeyabalaji Subramanian", email="jeyabalaji.subramanian@gmail.com" },
]
description = "A lightweight rule engine that allows declarative specification of business rules."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jeyabalajis/simple-rule-engine"
"Bug Tracker" = "https://github.com/jeyabalajis/simple-rule-engine/issues"

[tool.setuptools]
packages = [
    "simpleruleengine",
    "simpleruleengine.conditional",
    "simpleruleengine.exception",
    "simpleruleengine.expression",
    "simpleruleengine.operator",
    "simpleruleengine.rule",
    "simpleruleengine.rulerow",
    "simpleruleengine.ruleset",
    "simpleruleengine.token",
    "simpleruleengine.utils"
]
